--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,6 +1,10 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/Carteiras_test?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
+-- spring.datasource.url=jdbc:mysql://localhost:3306/Carteiras_test?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:h2:mem:carteira_tests
+-- spring.datasource.username=root
+spring.datasource.username=sa
+-- spring.datasource.password=root
+spring.datasource.password=
+-- spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
